# Microprocessor_Project

./: .cproject  .gitignore  .mxproject  .project  AGENTS.md  CLAUDE.md  CMakeLists.txt  FInal_fina.ioc  README.md  Week3.5-CodingDay.pptx  freertos开发计划.md  icp_map.c  icp_map.h  tmp_brief.txt
Core/Inc/: FreeRTOSConfig.h  adc.h  astar.h  control_logic.h  freertos_app.h  frontier.h  hc04.h  iwdg.h  localization_task.h  main.h  mapping_task.h  usart.h  (+11 more)
Debug/: FInal_fina.elf  FInal_fina.list  FInal_fina.map  makefile  objects.list
cmake/: gcc-arm-none-eabi.cmake
docs/: README.md  benchmark_log_template.csv  freertos_further_development_plan.md  lidar_rtos_pipeline_report.md  performance_validation.md  team_worksplit_analysis.md  video_checklist.md  week4_coding_day_report.md
host_app/: README.md  build.ps1  car_host_app.spec  main.py  navigation_protocol.py  navigation_simulator.py  pyproject.toml  requirements.txt  telemetry_protocol.py
host_app/host_app/: app.py
host_app/host_app/models/: __init__.py  state.py
host_app/host_app/protocol/: __init__.py  ascii_commands.py  pid_tuning.py  telemetry.py
host_app/host_app/services/: __init__.py  controller.py  store.py
host_app/host_app/tools/: __init__.py  pid_tuner_cli.py  replay_log.py
host_app/host_app/transport/: __init__.py  serial_transport.py
host_app/host_app/ui/: __init__.py  main_window.py  map_view.py  pid_tuning_panel.py  status_panel.py
host_app/tests/: test_navigation_protocol.py  test_pid_tuning.py  test_session_store.py  test_telemetry_parser.py  test_telemetry_protocol.py  test_ui_smoke.py
(+249 files in other folders)
