[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microprocessor-car-host-app"
version = "0.1.0"
description = "Windows-first host application for STM32 LiDAR robot telemetry, control, and visualization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8",
  "pyserial>=3.5",
  "pyqtgraph>=0.13",
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "PyInstaller>=6.0",
  "pytest>=8.0",
]

[project.scripts]
car-host-app = "host_app.app:main"

[tool.setuptools.packages.find]
include = ["host_app*"]
